Closed
Bug 1386182
Opened 8 years ago
Closed 8 years ago
Should set FeatureState after EnableByDefault() in gfxWindowsPlatform::InitializeD3D11Config
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
mozilla57
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox55 | --- | unaffected |
| firefox56 | --- | fixed |
| firefox57 | --- | fixed |
People
(Reporter: kechen, Assigned: kechen)
Details
Attachments
(1 file)
|
Bug 1386182 - Set FeatureState after EnableByDefault() in gfxWindowsPlatform::InitializeD3D11Config;
59 bytes,
text/x-review-board-request
|
jerry
:
review+
lizzard
:
approval-mozilla-beta+
|
Details |
We should set FeatureState after EnableByDefault()[1], it's a regression of 1364563, this part of code works fine in nightly since it only modifies FeatureStae in release and beta.
[1] https://dxr.mozilla.org/mozilla-central/rev/36f95aeb4c77f7cf3b3366583008cd6e4b6b1dba/gfx/thebes/gfxWindowsPlatform.cpp#1356
| Comment hidden (mozreview-request) |
Comment 2•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8892368 [details]
Bug 1386182 - Set FeatureState after EnableByDefault() in gfxWindowsPlatform::InitializeD3D11Config;
https://reviewboard.mozilla.org/r/163322/#review168674
Attachment #8892368 -
Flags: review?(hshih) → review+
| Assignee | ||
Updated•8 years ago
|
Attachment #8892368 -
Flags: approval-mozilla-beta?
| Assignee | ||
Comment 4•8 years ago
|
||
Comment on attachment 8892368 [details]
Bug 1386182 - Set FeatureState after EnableByDefault() in gfxWindowsPlatform::InitializeD3D11Config;
This is the uplift for Firefox 56.
Approval Request Comment
[Feature/Bug causing the regression]:
1351349
[User impact if declined]:
User with specific platform and specific graphics card might crash.
[Is this code covered by automated tests?]:
No.
[Has the fix been verified in Nightly?]:
No.
[Needs manual test from QE? If yes, steps to reproduce]:
No.
[List of other uplifts needed for the feature/fix]:
No.
[Is the change risky?]:
No.
[Why is the change risky/not risky?]:
It is just an one-line change and only change the order of the function call.
[String changes made/needed]:
None.
Attachment #8892368 -
Flags: approval-mozilla-beta?
| Assignee | ||
Comment 5•8 years ago
|
||
Some fix for comment 0, the regression bug should be bug 1351349.
Pushed by jacheng@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/2a68a71b3310
Set FeatureState after EnableByDefault() in gfxWindowsPlatform::InitializeD3D11Config; r=jerry
Comment 7•8 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
status-firefox57:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla57
| Assignee | ||
Updated•8 years ago
|
status-firefox55:
--- → unaffected
status-firefox56:
--- → affected
status-firefox-esr52:
--- → unaffected
Comment 8•8 years ago
|
||
Comment on attachment 8892368 [details]
Bug 1386182 - Set FeatureState after EnableByDefault() in gfxWindowsPlatform::InitializeD3D11Config;
Crash fix, regression from 56, so let's try this for beta 1.
Attachment #8892368 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 9•8 years ago
|
||
| bugherder uplift | ||
Comment 10•8 years ago
|
||
(In reply to Kevin Chen[:kechen] (UTC + 8) from comment #4)
> [Is this code covered by automated tests?]:
> No.
> [Has the fix been verified in Nightly?]:
> No.
> [Needs manual test from QE? If yes, steps to reproduce]:
> No.
Setting qe-verify- based on Kevin Chen's assessment on manual testing needs.
Flags: qe-verify-
You need to log in
before you can comment on or make changes to this bug.
Description
•