Bug 1386182 - Set FeatureState after EnableByDefault() in gfxWindowsPlatform::InitializeD3D11Config. r=jerry, a=lizzard

MozReview-Commit-ID: G0Ozjq0bFRt